<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="@dimen/dialog_size"
    android:layout_height="wrap_content"
    android:padding="@dimen/padding_screen_small">

    <TextView
        android:id="@+id/dialog_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_time_title"
        android:textSize="@dimen/text_title"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="@dimen/image_size"
        android:layout_height="@dimen/image_size"
        android:layout_marginTop="@dimen/padding_screen"
        android:contentDescription="@string/dialog_image_content"
        android:src="@drawable/ic_baseline_sentiment_very_dissatisfied_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dialog_title" />

    <Button
        android:id="@+id/dialog_leaderboard"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/dialog_leaderboard"
        android:textAllCaps="false"
        android:textStyle="bold"
        android:textSize="@dimen/text_subtitle"
        android:textColor="@color/purple"
        app:layout_constraintEnd_toStartOf="@+id/dialog_again"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <Button
        android:id="@+id/dialog_again"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/dialog_try_again"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="@dimen/text_subtitle"
        android:layout_marginStart="@dimen/padding_screen_small"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/dialog_leaderboard"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

</androidx.constraintlayout.widget.ConstraintLayout>